# poke_api

./: README.md
.github/workflows/: ci_access_management.yaml  ci_poke_api.yaml
access_management/: .env.test  README.md  manage.py  pyproject.toml  pytest.ini  requirements-tests.txt  requirements.txt
access_management/access_management/: asgi.py  settings.py  settings_test.py  urls.py  wsgi.py
access_management/accounts/: serializers.py  urls.py  views.py
access_management/accounts/management/commands/: create_pokemon_types.py
access_management/core/: config.py
access_management/tests/: base.py  conftest.py  factories.py  test_access_management.py
poke_api/: .env.test  .flake8  README.md  manage.py  pyproject.toml  pytest.ini  requirements-tests.txt  requirements.txt
poke_api/authentication/: auth_client.py  authentication.py  remote_user.py  schema.py
poke_api/core/: config.py
poke_api/poke_api/: asgi.py  settings.py  settings_test.py  urls.py  wsgi.py
poke_api/pokemons/: apps.py  models.py  serializers.py  urls.py  views.py
poke_api/pokemons/management/commands/: create_pokemon_types.py  create_pokemons.py
poke_api/pokemons/migrations/: 0001_initial.py
poke_api/tests/: conftest.py  test_commands.py  test_pokemons.py
